# pyscraper

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_INDEX.md  CLAUDE.md  CODEBASE_ANALYSIS.md  Dockerfile  Dockerfile.playwright-chromium  Dockerfile.playwright-firefox  Dockerfile.playwright-webkit  Dockerfile.standalone  MODULE_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  TESTING_GUIDE.md  TESTING_QUICK_REFERENCE.md  TESTING_QUICK_REFERENCE_UPDATED.md  TEST_CATEGORIES.md  TEST_FAILURE_ANALYSIS.md  TEST_IMPROVEMENTS_SUMMARY.md  TEST_LIST.md  TEST_STRATEGY.md  TEST_STRATEGY_UPDATED.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker.yml  tests.yml
docs/: development.md  testing.md
docs/analysis/: test-coverage.md
kubernetes/: pyscraper.yml
pyscraper/: __init__.py  constants.py  hlsfile.py  requests.py  utils.py  webfile.py  webpage.py  webpage_curl.py  webpage_playwright.py  webpage_requests.py  webpage_selenium.py
scripts/: playwright_server.py
tests/: conftest.py  test_hlsfile.py  test_utils.py  test_webfile.py  test_webpage.py  test_webpage_playwright.py
tests/integration/: README.md  __init__.py  test_webfile_integration.py
tests/testdata/: test.html  test2.html  video.m3u8  video000.ts  video001.ts  video002.ts  video_absolute_url.m3u8
